public/home.css
* {
  user-select: none;
}

body {
  background-color: #2a2a2a;
  min-height: 100vh;
  background-image: url("/home-bg.png");
  background-repeat: no-repeat;
  background-position: center;
  /* background-size: 100%; */
  background-size: contain;
}

a {
  text-decoration: none;
  color: unset;
}

a:hover {
  cursor: pointer;
}

a:active {
  text-decoration: none;
}

#home {
  font-family: Poppins, sans-serif;
  text-align: center;
  width: 98%;
  padding: 1rem;
  margin: 0 auto;
  min-height: calc(100vh - 19px);
  background-position: center;
  background-size: cover;
  transition: background-image 0.3s linear;
  position: relative;
}

.welcome {
  color: #ffffff;
  margin-bottom: 2rem;
  text-align: left;
  font-weight: bold;
  transition: all 0.3s linear;
}

.elevated {
  box-shadow: -5px -5px 10px rgba(111, 111, 111, 0.25),
    5px 5px 10px rgba(24, 24, 24, 0.61), -2px -2px 4px rgba(111, 111, 111, 0.5),
    2px 2px 4px rgba(24, 24, 24, 0.8);
}

.time-table {
  position: absolute;
  right: 1.9rem;
  top: 1.32rem;
  height: 60px;
  width: 60px;
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #2a2a2a;
  transition: all 0.3s linear;
}

.time-table:active {
  box-shadow: none;
}

.time-table svg {
  transition: all 0.3s linear;
  margin-bottom: 4px;
}

.time-table svg path {
  transition: all 0.3s linear;
}

.drive {
  border-radius: 1rem;
  margin: 3rem 1rem 0 auto;
  max-width: 150px;
  padding: 16px;
  transition: all 0.3s linear;
}

@media screen and (min-width: 1000px) {
  .welcome{
      transition: all 0.3 ease;
      margin-right: 85%
    }
  .welcome:hover{
    color: #000000;
    transition: all 0.3s ease;
    animation: welcome 8s linear infinite;
  }
  @keyframes welcome {
    0%{ text-shadow: 0 0 5px #6130c9;}
    25%{ text-shadow: 0 0 5px #eb0fa0;}
    50%{ text-shadow: 0 0 5px #03a70a;}
    75%{ text-shadow: 0 0 5px #f58400;}
    100%{ text-shadow: 0 0 5px #6130c9;}      
  }
  .drive:hover{
    /* #ea4335 - red
       #4285f4 - blue
       #fbbc05 - yellow
       #34a853 - green */
    box-shadow: 2px 0 4px #ea4335,0 2px 4px #4285f4,-2px 0 4px #34a853,0 -2px 4px #fbbc05;
    animation: drive 3s linear infinite;
    }
    @keyframes drive {
      0%{ box-shadow: 4px 0 4px #ea4335,0 4px 4px #4285f4,-4px 0 4px #34a853,0 -4px 4px #fbbc05;}
      25%{ box-shadow: 4px 0 4px #fbbc05,0 4px 4px #ea4335,-4px 0 4px #4285f4,0 -4px 4px #34a853;}
      50%{ box-shadow: 4px 0 4px #34a853,0 4px 4px #fbbc05,-4px 0 4px #ea4335,0 -4px 4px #4285f4;}
      75%{ box-shadow: 4px 0 4px #4285f4,0 4px 4px #34a853,-4px 0 4px #fbbc05,0 -4px 4px #ea4335;}
      100%{ box-shadow: 4px 0 4px #ea4335,0 4px 4px #4285f4,-4px 0 4px #34a853,0 -4px 4px #fbbc05;}      
    }
    .time-table:hover{
      box-shadow: -5px -5px 10px rgba(185, 185, 185, 0.25),-2px -2px 6px rgba(185, 185, 185, 0.5),
    5px 5px 10px rgba(0, 0, 0, 0.91),2px 2px 6px rgba(0, 0, 0);
    }
    .time-table:hover svg {
      transform: scale(1.1);
      fill:#ea4335;
      transition: all 0.3s linear;
      animation: logo 8s linear infinite;
    }
    @keyframes logo {
      0%{ fill:#ea4335;}
      25%{ fill:#4285f4;}
      50%{ fill:#34a853;}
      75%{ fill:#fbbc05;}
      100%{ fill:#ea4335;}
      
    }
}

.drive:active {
  box-shadow: none !important;
}

.drive p {
  color: #ffffff;
  margin: 0.19rem;
}

.flutter,.green,.blue,.purple,.pink,.red,.orange{
  display: none;
}
.laptop,.notice-1,.notice-2,.notice-3,.notice-4,.notice-5,.notice-6{
  display: none;
}

footer p {
  color: #707070a4;
  text-align: center;
  font-size: 0.7rem;
  margin: 0;
}

footer a:hover {
  text-decoration: underline;
  color: #707070;
}

@media screen and (min-width: 1280px) {
  body {
    background-image: url("/home-bg-lg.png");
    background-size: contain !important;
  }
  .flutter,.green,.blue,.purple,.pink,.red,.orange{
    display: block;
  }

  .laptop,.notice-1,.notice-2,.notice-3,.notice-4,.notice-5,.notice-6{
    display: block;
  }

.laptop{
    position: absolute;
    transform: translate(48.4vw,-26.4vh);
    background-color: transparent;
    cursor: pointer;
    width: 110px;
    height: 62px;
    transition: all 0.3s ease;
  }
  .laptop:hover{
    box-shadow: 0 0 20px #018fdf;
    transition: all 0.3s ease;
  }

  .notice-1,.notice-2,.notice-3,.notice-4,.notice-5,.notice-6{
    position: absolute;
    background-color: transparent;
    cursor: pointer;
    width: 30px;
    height: 35px;
    transition: all 0.3s ease;
  }
  .notice-1{ transform: translate(59.7vw,-52.4vh); }
  .notice-2{ transform: translate(56.3vw,-46.2vh); }
  .notice-3{ transform: translate(59.9vw,-40.4vh); }
  .notice-4{ transform: translate(34.9vw,-69.2vh); }
  .notice-5{ transform: translate(39vw,-63.9vh); }
  .notice-6{ transform: translate(36vw,-57.5vh); }

  .notice-1:hover,.notice-2:hover,.notice-3:hover,.notice-4:hover,.notice-5:hover,.notice-6:hover{
    border-radius: 3px;
    transition: all 0.3s ease;
  }

  .notice-1:hover{ box-shadow: 0 0 10px 3px #03a70a; }
  .notice-2:hover{ box-shadow: 0 0 10px 3px #018fdf; }
  .notice-3:hover{box-shadow: 0 0 10px 3px #6130c9; }
  .notice-4:hover{ box-shadow: 0 0 10px 3px #eb0fa0; }
  .notice-5:hover{ box-shadow: 0 0 10px 3px #fa3e3e; }
  .notice-6:hover{ box-shadow: 0 0 10px 3px #f58400; }
}

@media screen and (min-width: 800px) {
  body {
    background-image: url("/home-bg-lg.png");
    background-size: cover;
  }
  .welcome {
    margin-bottom: 0.55rem;
  }
  .drive {
    display: inline-block;
  }
  footer P {
    text-align: right;
    margin-right: 0.3rem;
  }
}

